# DuoTools

./: CMakeLists.txt  DuoTools.sln  LICENSE  README.md  grab_dlls.py
DuoEngine/: CMakeLists.txt  DuoEngine.c  DuoEngine.h  DuoEngine.vcxproj  DuoEngine.vcxproj.filters  DuoParse.h  getopt.h  posix_conio.h  windows_getopt.h
DuoUDP/: CMakeLists.txt  DuoUDP.c  DuoUDP.vcxproj  DuoUDP.vcxproj.filters
DuoWAV/: CMakeLists.txt  DuoWAV.c  DuoWAV.vcxproj  DuoWAV.vcxproj.filters  wav.h
experiments/fm_correlation/: .gitignore  collect.py  plot.py  settings.json  stations.csv
